# bezier-curves

./: CMakeLists.txt  README.md  bezier.cpp  run.sh
include/: BezierCurve.hpp  BezierPoint.hpp
src/: bezier.cpp  main.cpp
